fix: ticket price should not wrap

--- a/app/component/mobile-ticket-purchase-information.scss
+++ b/app/component/mobile-ticket-purchase-information.scss
@@ -112,6 +112,7 @@
       .ticket-description {
         display: flex;
         color: #fff;
+        white-space: nowrap;
       }
 
       .ticket-identifier {
